# base64

./: .gitignore  README.org  meson.build
include/: decode.h  encode.h  io.h
src/: decode.c  encode.c  io.c  main.c
